@@ -1,0 +1,12 @@
+<?php
+namespace meteocontrol\vcomapi\model;
+
+class VirtualMeter extends BaseModel {
+
+    /** @var string */
+    public $id;
+    /** @var string */
+    public $name;
+    /** @var string */
+    public $serial;
+}
