@@ -1,0 +1,10 @@
+{
+  "data": [
+    {
+      "id": "146803854",
+      "type": "AUTO",
+      "timestamp": "2018-03-31T23:59:59+02:00",
+      "value": 3958.0235319860999
+    }
+  ]
+}
