@@ -1,0 +1,10 @@
+{
+  "data": [
+    {
+      "id": "146803874",
+      "type": "MANUAL",
+      "timestamp": "2019-11-01T09:30:00+01:00",
+      "value": 10000
+    }
+  ]
+}
