@@ -1,0 +1,17 @@
+{
+  "data": [
+    {
+      "id": "146803853",
+      "type": "MANUAL",
+      "timestamp": "2018-02-28T23:59:59+01:00",
+      "value": 3698.2216528918002
+    },
+    {
+      "id": "146803855",
+      "type": "MANUAL",
+      "timestamp": "2018-04-30T23:59:59+02:00",
+      "value": 4294.8163073654996
+    }
+  ]
+}
+
